refactor!: diputados data handling and endpoint updates
